# app

./: .gitignore  README.md  meson.build
include/: app.hpp  application.hpp  types.hpp  window.hpp
src/: application.cpp  meson.build  window.cpp
subprojects/: tgui.wrap
tests/: meson.build  test1.cpp
tests/assets/: popup1.txt  test1_main.txt
